[metadata]
name = bat
version = 1.0
summary = Docker host manager client
description-file =
    README.rst
author = Longgeek
author-email = longgeek@thstack.com
home-page = http://www.thstack.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    bat
